Add AutheliaService instead of MeController